--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "qr-scanner": "^1.2.0",
     "quasar": "^1.0.0",
     "register-service-worker": "^1.7.1",
+    "video.js": "^7.12.3",
+    "videojs-youtube": "^2.6.1",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
     "vue-qr": "^2.3.0",
