--- a/apollo-server/package.json
+++ b/apollo-server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "googleapis": "^71.0.0",
     "graphql": "^15.4.0",
+    "graphql-rate-limit": "^3.1.0",
     "graphql-type-json": "^0.2.1",
     "handlebars": "^4.7.7",
     "hbs": "^4.1.2",
