--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "quasar": "^1.0.0",
     "register-service-worker": "^1.7.1",
     "video.js": "^7.12.3",
+    "videojs-constant-timeupdate": "^1.0.0",
     "videojs-youtube": "^2.6.1",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
