--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "serve": "vue-cli-service apollo:schema:generate && vue-cli-service serve --prefix .",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "postinstall": "npm install --prefix ./apollo-server && vue-cli-service apollo:schema:generate",
     "apollo": "node apollo-server/server.js",
     "apollo:dev": "vue-cli-service apollo:schema:generate && nodemon ./apollo-server/server.js",
     "apollo:schema:generate": "vue-cli-service apollo:schema:generate",
@@ -17,37 +16,55 @@
     "start": "npm run start --prefix ./apollo-server"
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
-    "@quasar/quasar-ui-qcalendar": "^3.3.5",
-    "core-js": "^3.6.5",
+    "@quasar/extras": "^1.10.7",
+    "@quasar/quasar-ui-qcalendar": "^3.4.0",
+    "apollo-server-express": "^2.25.2",
+    "bcrypt": "^5.0.1",
+    "core-js": "^3.15.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "googleapis": "^78.0.0",
+    "graphql": "^15.4.0",
+    "graphql-rate-limit": "^3.1.0",
+    "graphql-type-json": "^0.3.2",
+    "handlebars": "^4.7.7",
+    "hbs": "^4.1.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.14",
+    "nodemailer": "^6.6.2",
+    "nodemailer-express-handlebars": "^4.0.0",
     "qr-scanner": "^1.2.0",
-    "quasar": "^1.0.0",
-    "register-service-worker": "^1.7.1",
+    "quasar": "^1.15.20",
+    "register-service-worker": "^1.7.2",
     "video.js": "^7.12.3",
     "videojs-constant-timeupdate": "^1.0.0",
     "videojs-youtube": "^2.6.1",
-    "vue": "^2.6.11",
-    "vue-apollo": "^3.0.0-beta.11",
-    "vue-qr": "^2.3.0",
-    "vue-router": "^3.4.9"
+    "vue": "^2.6.14",
+    "vue-apollo": "^3.0.7",
+    "vue-qr": "^2.5.0",
+    "vue-router": "^3.5.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-service": "^4.1.1",
+    "@vue/cli-plugin-babel": "~4.5.13",
+    "@vue/cli-plugin-eslint": "~4.5.13",
+    "@vue/cli-plugin-pwa": "~4.5.13",
+    "@vue/cli-service": "^4.5.13",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
+    "cache-loader": "^4.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-graphql": "^4.0.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-vue": "^7.11.1",
+    "graphql-tag": "^2.12.4",
     "mongoose-seed": "^0.6.0",
-    "node-sass": "^4.13.0",
-    "prettier": "^1.19.1",
-    "sass-loader": "^8.0.0",
+    "node-sass": "^6.0.0",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.3.1",
+    "sass-loader": "^10.2.0",
     "vue-cli-plugin-apollo": "~0.22.2",
-    "vue-cli-plugin-quasar": "~3.0.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-quasar": "~3.0.2",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^4.46.0"
   }
 }
