--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "apollo-server-express": "^2.25.2",
     "bcrypt": "^5.0.1",
     "core-js": "^3.15.1",
+    "dataloader": "^2.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "googleapis": "^78.0.0",
     "graphql": "^15.4.0",
-    "graphql-rate-limit": "^3.1.0",
     "graphql-middleware": "^6.0.10",
+    "graphql-rate-limit": "^3.1.0",
     "graphql-type-json": "^0.3.2",
     "handlebars": "^4.7.7",
     "hbs": "^4.1.2",
