--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "graphql-middleware": "^6.0.10",
     "graphql-rate-limit": "^3.1.0",
     "graphql-type-json": "^0.3.2",
+    "graphql-voyager": "^1.0.0-rc.31",
     "handlebars": "^4.7.7",
     "hbs": "^4.1.2",
     "jsonwebtoken": "^8.5.1",
