--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "handlebars": "^4.7.7",
     "hbs": "^4.1.2",
     "jsonwebtoken": "^8.5.1",
+    "lru-cache": "^6.0.0",
     "mongoose": "^5.12.14",
     "nodemailer": "^6.6.2",
     "nodemailer-express-handlebars": "^4.0.0",
